// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lib utils addLibraryFeature assets options should update angular.json file with assets 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "standalone": false
        },
        "@schematics/angular:directive": {
          "standalone": false
        },
        "@schematics/angular:pipe": {
          "standalone": false
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular-devkit/build-angular:application",
          "options": {
            "outputPath": "dist/schematics-test",
            "index": "src/index.html",
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              "src/favicon.ico",
              "src/assets"
            ],
            "styles": [
              "src/styles.scss"
            ],
            "scripts": [],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kb",
                  "maximumError": "2.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "2kb",
                  "maximumError": "4kb"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular-devkit/build-angular:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "extract-i18n": {
          "builder": "@angular-devkit/build-angular:extract-i18n",
          "options": {
            "buildTarget": "schematics-test:build"
          }
        },
        "test": {
          "builder": "@angular-devkit/build-angular:karma",
          "options": {
            "polyfills": [
              "zone.js",
              "zone.js/testing"
            ],
            "tsConfig": "tsconfig.spec.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              "src/favicon.ico",
              "src/assets"
            ],
            "styles": [
              "src/styles.scss"
            ],
            "scripts": [],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            }
          }
        }
      }
    }
  }
}"
`;

exports[`Lib utils addLibraryFeature assets options should update angular.json file with assets 2`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "standalone": false
        },
        "@schematics/angular:directive": {
          "standalone": false
        },
        "@schematics/angular:pipe": {
          "standalone": false
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular-devkit/build-angular:application",
          "options": {
            "outputPath": "dist/schematics-test",
            "index": "src/index.html",
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              "src/favicon.ico",
              "src/assets",
              {
                "glob": "**/*",
                "input": "./node_modules/@spartacus/smartedit/assets",
                "output": "assets/"
              }
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/xxx.scss"
            ],
            "scripts": [],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kb",
                  "maximumError": "2.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "2kb",
                  "maximumError": "4kb"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular-devkit/build-angular:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "extract-i18n": {
          "builder": "@angular-devkit/build-angular:extract-i18n",
          "options": {
            "buildTarget": "schematics-test:build"
          }
        },
        "test": {
          "builder": "@angular-devkit/build-angular:karma",
          "options": {
            "polyfills": [
              "zone.js",
              "zone.js/testing"
            ],
            "tsConfig": "tsconfig.spec.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              "src/favicon.ico",
              "src/assets",
              {
                "glob": "**/*",
                "input": "./node_modules/@spartacus/smartedit/assets",
                "output": "assets/"
              }
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/xxx.scss"
            ],
            "scripts": [],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            }
          }
        }
      }
    }
  }
}"
`;

exports[`Lib utils addLibraryFeature custom config option should add the custom config when set 1`] = `
"import { NgModule } from '@angular/core';
import { CdsConfig } from "@spartacus/cds";
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { translationChunk, translations } from "@spartacus/xxx/assets";
import { XxxModuleRoot } from "@spartacus/xxx/root";

@NgModule({
  declarations: [],
  imports: [
    XxxModuleRoot
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      xxx: {
        module: () =>
          import('@spartacus/xxx').then((m) => m.XxxModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: translations,
      chunks: translationChunk,
    },
  }),
  provideConfig(<CdsConfig>{
    cds: {
      profileTag: {
        javascriptUrl:
          'random',
        configUrl:
          'random',
        allowInsecureCookies: true,
      },
    },
  })
  ]
})
export class XxxFeatureModule { }
"
`;

exports[`Lib utils addLibraryFeature should NOT add i18n if the config is not present 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, provideConfig } from "@spartacus/core";
import { XxxModuleRoot } from "@spartacus/xxx/root";

@NgModule({
  declarations: [],
  imports: [
    XxxModuleRoot
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      xxx: {
        module: () =>
          import('@spartacus/xxx').then((m) => m.XxxModule),
      },
    }
  })]
})
export class XxxFeatureModule { }
"
`;

exports[`Lib utils addLibraryFeature should add i18n config in feature module 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { translationChunk, translations } from "@spartacus/xxx/assets";
import { XxxModuleRoot } from "@spartacus/xxx/root";

@NgModule({
  declarations: [],
  imports: [
    XxxModuleRoot
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      xxx: {
        module: () =>
          import('@spartacus/xxx').then((m) => m.XxxModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: translations,
      chunks: translationChunk,
    },
  })
  ]
})
export class XxxFeatureModule { }
"
`;

exports[`Lib utils addLibraryFeature when the eager loading is configured should add it in the eager way 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { XxxModule } from "@spartacus/xxx";
import { translationChunk, translations } from "@spartacus/xxx/assets";
import { XxxModuleRoot } from "@spartacus/xxx/root";

@NgModule({
  declarations: [],
  imports: [
    XxxModuleRoot,
    XxxModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: translations,
      chunks: translationChunk,
    },
  })]
})
export class XxxFeatureModule { }
"
`;

exports[`Lib utils addLibraryFeature when the lazy loading is configured should add it in the lazy loading way 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { translationChunk, translations } from "@spartacus/xxx/assets";
import { XxxModuleRoot } from "@spartacus/xxx/root";

@NgModule({
  declarations: [],
  imports: [
    XxxModuleRoot
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      xxx: {
        module: () =>
          import('@spartacus/xxx').then((m) => m.XxxModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: translations,
      chunks: translationChunk,
    },
  })
  ]
})
export class XxxFeatureModule { }
"
`;
